Source/Plugins/Core/com.equella.core/resources/web/sass/legacy.scss
@import "jquerylib/fancybox/jquery.fancybox.css";
@import "jquerylib/jquery.stylish-select.css";
@import "themes/equella/jquery-ui.css";
@import "themes/equella/jquery-ui.css";
@import "component/autocomplete.css";
@import "autocompleteeditbox.css";
@import "component/richdropdown.css";
@import "autocompleteeditbox.css";
@import "attachments/attachments.css";
@import "jquerylib/jquery.autocomplete.css";
@import "jquerylib/jquery.stylish-select.css";
@import "jquerylib/jquery.treeview.css";
@import "themes/equella/jquery-ui.css";
@import "component/richdropdown.css";
@import "component/box.css";
@import "altlinks.css";
@import "courselist.css";
@import "render/jquery.fileinput.css";
@import "render/ajaxupload.css";
@import "settings.css";
@import "popupbrowser.css";
@import "shufflebox.css";
@import "treenavctl.css";
@import "moderate.css";
@import "modcomments.css";
@import "youtube.css";
@import "taskaction.css";
@import "remotecaching.css";
@import "contentrestrictions.css";
@import "adduserandquota.css";
@import "selector.css";
@import "select2.css";
@import "schedulersettings.css";

@font-face {
  font-family: "Material Icons";
  font-style: normal;
  font-weight: 400;
  src: url(https://fonts.gstatic.com/s/materialicons/v48/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2)
    format("woff2");
}

@font-face {
  font-family: "Roboto";
  font-style: normal;
  font-weight: 300;
  src: url(https://fonts.gstatic.com/s/roboto/v20/KFOlCnqEu92Fr1MmSU5fCRc4EsA.woff2)
    format("woff2");
}

//*** material typography ***///
@mixin typography-headline-1 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-size: 6rem;
  line-height: 6rem;
  font-weight: 300;
  letter-spacing: -0.015625em;
  text-decoration: inherit;
  text-transform: inherit;
}

@mixin typography-headline-2 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-size: 3.75rem;
  line-height: 3.75rem;
  font-weight: 300;
  letter-spacing: -0.0083333333em;
  text-decoration: inherit;
  text-transform: inherit;
}

@mixin typography-headline-3 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-size: 3rem;
  line-height: 3.125rem;
  font-weight: 400;
  letter-spacing: normal;
  text-decoration: inherit;
  text-transform: inherit;
}

@mixin typography-headline-4 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-size: 2.125rem;
  line-height: 2.5rem;
  font-weight: 400;
  letter-spacing: 0.0073529412em;
  text-decoration: inherit;
  text-transform: inherit;
}

@mixin typography-headline-5 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-size: 1.5rem;
  line-height: 2rem;
  font-weight: 400;
  letter-spacing: normal;
  text-decoration: inherit;
  text-transform: inherit;
}

@mixin typography-headline-6 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-size: 1.25rem;
  line-height: 2rem;
  font-weight: 500;
  letter-spacing: 0.0125em;
  text-decoration: inherit;
  text-transform: inherit;
}

@mixin typography-subtitle-1 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-size: 1rem;
  line-height: 1.75rem;
  font-weight: 400;
  letter-spacing: 0.009375em;
  text-decoration: inherit;
  text-transform: inherit;
}

@mixin typography-subtitle-2 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 500;
  letter-spacing: 0.0071428571em;
  text-decoration: inherit;
  text-transform: inherit;
}

@mixin typography-body-1 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  letter-spacing: 0.03125em;
  text-decoration: inherit;
  text-transform: inherit;
}

@mixin typography-body-2 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: 400;
  letter-spacing: 0.0178571429em;
  text-decoration: inherit;
  text-transform: inherit;
}

@mixin typography-caption {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-size: 0.75rem;
  line-height: 1.25rem;
  font-weight: 400;
  letter-spacing: 0.0333333333em;
  text-decoration: inherit;
  text-transform: inherit;
}

@mixin typography-button {
  font-family: Roboto, sans-serif;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-size: 0.875rem;
  line-height: 2.25rem;
  font-weight: 500;
  letter-spacing: 0.0892857143em;
  text-decoration: none;
  text-transform: uppercase;
}

/*****************************************************************************
Animations
*****************************************************************************/
@keyframes snackbar {
  0%,
  100% {
    bottom: -80px;
  }

  10%,
  90% {
    bottom: 0px;
  }
}

//**sass functions**//
@function set-text-color($color) {
  @if (lightness($color) > 70) {
    @return #444444;
  } @else {
    @return #ffffff;
  }
}

html,
body,
div,
span,
applet,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
font,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
input,
textarea,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
select {
  width: auto;
  height: auto;
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  font-size: 100%;
  vertical-align: baseline;
  background: transparent;
  font-family: "Roboto";
}
ul {
  list-style: none;
}
/* ... */

